# mg-etl-miner

./: .gitignore  CONTRIBUTING.md  FUNDING.md  FUNDING.yml  README.md  concat_files.sh  config.json  deployment.yml  docker-compose.yml  out.md  out_content.txt  pytest.ini  requirements.txt  run_tests.sh  run_ut.sh  service.yml  setup.cfg  setup.py  setup_logging.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/diagrams/: README.md
mg_miner/: .coverage  cli.py  compliance_patterns.json  generate_tests.py  outputs  requirements.txt
mg_miner/configs/: cloud.yaml  component_patterns.yml  config.yml  database.yml  exclusions.yaml  logging.yml
mg_miner/core/: __init__.py  cloud_upload.py  component_detector.py  file_collector.py  redactor.py  summary_creator.py
mg_miner/scripts/: run_tests.sh
mg_miner/tests/: test_cli.py  test_component_detector.py  test_file_collector.py  test_mg_miner.py  test_redactor.py  test_summary_creator.py  test_utils.py
mg_miner/utils/: __init__.py  cloud.py  logging_wrapper.py  utils.py
scripts/: run_ut.sh
tests/integration/: test_integration.py
tests/unit/: test_cli.py  test_cloud_upload.py  test_component_detector.py  test_file_collector.py  test_redactor.py  test_summary_creator.py  test_utils.py
