[metadata]
name = mg-miner
version = 1.0.0
author = Jeffrey Plewak
author_email = plewak.jeff@gmail.com
description = A comprehensive tool to mine and summarize project files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tarcsb/mg-etl-miner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    flake8
    black
    pytest
    pytest-cov
    mypy
    bandit
    selenium
    behave
    locust
    prometheus-client
    opentelemetry-api
    opentelemetry-sdk
    opentelemetry-exporter-prometheus
    grafanalib

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme

[coverage:run]
branch = True
source = mg_miner

[coverage:report]
omit =
    */tests/*
    */venv/*
    /usr/*
    */dist-packages/*
